<resources>
    <string name="app_name">Student_Listing_App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone no.</string>
    <string name="course">Course</string>
    <string name="add">Add</string>
    <string name="roll_no">Roll No.</string>
    <string name="_1">1</string>
    <string name="_1906066">1906066</string>
    <string name="cse">CSE</string>
    <string name="bandhan">Bandhan</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>