<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rowLayout"
     android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="2dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/id_txt"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:layout_weight="1"
                    android:text="@string/_1"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name_txt"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bandhan"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/course_txt"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cse"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/rollno_txt"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_1906066"
                    android:textSize="24sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>